[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/NewBRD.gd" type="Script" id=1]

[node name="NewBRD" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="NewItemText" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 1000.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="AddItemButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 1004.0
margin_right = 1024.0
margin_bottom = 20.0
text = "+"

[node name="Columns" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ToDoColumn" type="VBoxContainer" parent="VBoxContainer/Columns"]
margin_right = 510.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( -454, 111 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DoneColumn" type="VBoxContainer" parent="VBoxContainer/Columns"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( -454, 111 )
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddItemButton" to="." method="_on_AddItemButton_pressed"]
